--- a/cit/static/templates/profile.html
+++ b/cit/static/templates/profile.html
@@ -30,7 +30,7 @@
 				</div>
 			    <div class="form-group">
 			        <div class="col-sm-offset-2 col-sm-10">
-			            <button type="submit" class="btn btn-default">{{'SUBMIT' | translate}}</button>
+			            <button type="submit" class="btn btn-default">[['SUBMIT' | translate]]</button>
 			        </div>
 			    </div>
 			</form>
