--- a/cit/static/templates/report_issue.html
+++ b/cit/static/templates/report_issue.html
@@ -7,9 +7,9 @@
 		<div ng-show="faile" class="alert alert-danger" role="alert">Oh snap! Change few things up and try submitting again.</div>
             <div class="form-group">
 			    <label for="comment" translate="DESCRIPTION">Description</label>
-			    <textarea ng-model="IssueCtrl.issue.description" class="form-control" rows="4" id="comment" placeholder="{{'WRITE_COMMENT' | translate}}"></textarea>
+			    <textarea ng-model="IssueCtrl.issue.description" class="form-control" rows="4" id="comment" placeholder="[['WRITE_COMMENT' | translate]]"></textarea>
 			</div>
-			<button type="submit"  class="btn btn-default">{{'SUBMIT' | translate }}</button>
+			<button type="submit"  class="btn btn-default">[['SUBMIT' | translate ]]</button>
 		</form>
 	</div>
 	<!--Form for report issue ends -->
